--- a/media-query.html
+++ b/media-query.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styles9.css" rel="stylesheet" type="text/css" media="all">
     <title>Media Queries</title>
   </head>
   <body>
